Fix big gap between two input sections

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -80,7 +80,3 @@ button {
 textarea {
   font-family: inherit;
 }
-
-main { 
-  min-height: 80vh;
-}
