--- a/src/styles/partials/_showcase.scss
+++ b/src/styles/partials/_showcase.scss
@@ -19,7 +19,3 @@
     }
   }
 }
-
-.showcase-code-input-section {
-  margin-top: -23rem;
-}
